crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__package_prompts_all_flags_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: format_steps(&steps)
---
Step 1:
  Label: Description:
  Kind: Text (placeholder: "An AI plugin package")
