crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__package_prompts_type_flag_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: format_steps(&steps)
---
Step 1:
  Label: Package name:
  Kind: Text (placeholder: "my-cool-project")
  Validate: package-name
  Help: Lowercase alphanumeric with hyphens, or @org/name

Step 2:
  Label: Description:
  Kind: Text (placeholder: "An AI plugin package")
