crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__resolve_package_custom_name_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(Some("my-plugin"), Some(Skill))
