crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__resolve_package_defaults_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(None, Some(Composite))
