crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__resolve_package_with_both_flags_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(Some("preset"), Some(Hook))
