crates/aipm-pack/src/snapshots/aipm_pack__wizard__tests__resolve_package_with_type_flag_snapshot.snap
---
source: crates/aipm-pack/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(Some("custom"), Some(Agent))
